fixup! bpo-40585: Normalize errors messages in codeop when comparing them