Lib/codeop.py
@@ -93,13 +93,10 @@ def _maybe_compile(compiler, source, filename, symbol):
     except SyntaxError as e:
         err2 = e
 
-    def normalize_error(err):
-        return repr(err).replace("\\n", "")
-
     try:
         if code:
             return code
-        if not code1 and normalize_error(err1) == normalize_error(err2):
+        if not code1 and repr(err1) == repr(err2):
             raise err1
     finally:
         err1 = err2 = None
